@@ -19,7 +19,8 @@
 
 namespace pnnx {
 
-int load_torchscript(const std::string& ptpath, \
+int load_torchscript(const std::string& ptpath, 
+                    const std::string& save_dir,
                     std::unordered_map<std::string, std::shared_ptr<pnnx::Graph>>& pnnx_graph_map,
                      const std::string& device,
                      const std::vector<std::vector<int64_t> >& input_shapes,
