@@ -346,7 +346,7 @@ int main(int argc, char** argv)
         dynamic_network = true;
     }
     std::unordered_map<std::string, std::shared_ptr<pnnx::Graph>> pnnx_graph_map;
-    load_torchscript(ptpath, pnnx_graph_map,
+    load_torchscript(ptpath, save_dir, pnnx_graph_map,
                      device, input_shapes, input_types,
                      input_shapes2, input_types2,
                      customop_modules, module_operators,
