@@ -5,7 +5,7 @@
 // #include <torch/extension.h>
 #define STRINGIFY(x)       #x
 #define MACRO_STRINGIFY(x) STRINGIFY(x)
-#define MYLIBRARY_VERSION  "dev.1.0.21.20240619"
+#define MYLIBRARY_VERSION  "dev.1.0.22.20240620"
 using namespace pnnx_graph;
 using namespace pnnx_ir;
 namespace py = pybind11;
